[project]
name = "zer0gear-comfy-utilities"
description = "Nodes: List Combine with custom separator, Multiline String, Tavern Card Info, Tavern Card Creation"
version = "3.1.0" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/zer0thgear/zer0-comfy-utils"

[tool.comfy]
PublisherId = "zer0gear"
DisplayName = "zer0ComfyUtilities" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)